# virtual_paint_opencv

./: CMakeLists.txt  CMakePresets.json
src/: VirtualPaint.cpp  VirtualPaint.h  main.cpp
